[package]
name = "rust_bot"
version = "1.0.0"
authors = ["Anthony Schreiber <schreiberanthony72@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.5"
tokio = {version = "1.5", features = ["full", "time"] }
